tests/paczka2/big_fuzzy/73666140.err
Error in line 1: A478 A478 97,9
Error in line 9: oBWFxpz A789 86,83
Error in line 19: Q3xL1v26qH A789 53,9
Error in line 28: Q3xL1v26qH A974 42,1
Error in line 33: oBWFxpz A478 4,4
Error in line 39: pCFKwO S628 81,9
Error in line 6: A478 A974 24,1
Error in line 48: A478 A789 -1,5
Error in line 50: YDX A789 455,8
Error in line 47: A478 A789 53,4
Error in line 52: YDX S628 96,7
Error in line 34: Q3xL1v26qH A789 264,4
Error in line 54: YDX A478 67,1
Error in line 51: khNVPtDeVH A974 224,7
Error in line 67: oBWFxpz A974 29,7
Error in line 80: Q3xL1v26qH A974 15,5
Error in line 68: pCFKwO A974 222,1
Error in line 82: Q3xL1v26qH A789 58,3
Error in line 79: khNVPtDeVH A478 4,8
Error in line 66: A478 A974 125,1
Error in line 112: Q3xL1v26qH A789 34,1
Error in line 123: Q3xL1v26qH S628 0,70
Error in line 101: pCFKwO A478 27,0
Error in line 130: oBWFxpz A478 97,55
Error in line 120: oBWFxpz S628 46,9
Error in line 141: khNVPtDeVH A974 79,9
Error in line 142: pCFKwO A974 84,2
Error in line 145: pCFKwO S628 74,7
Error in line 147: pCFKwO A974 35,5
Error in line 153: pCFKwO S628 75,2
Error in line 149: mdqxHL A789 98,1
Error in line 154: pCFKwO A789 97,2
Error in line 156: pCFKwO S628 30,1
Error in line 163: mdqxHL A974 -6,0
Error in line 137: oBWFxpz A478 320,8
Error in line 166: mdqxHL A478 88,3
Error in line 164: oBWFxpz A974 87,5
Error in line 167: mdqxHL A974 3,5
Error in line 170: oBWFxpz A789 44,3
Error in line 173: mdqxHL S628 64,2
Error in line 190: khNVPtDeVH A789 18,7
Error in line 195: Q3xL1v26qH A974 78,8
Error in line 200: Q3xL1v26qH A789 96,5
Error in line 210: pCFKwO A974 60,1
Error in line 223: Q3xL1v26qH A478 35,1
Error in line 230: pCFKwO S628 247,9
Error in line 235: oBWFxpz S628 38,1
Error in line 238: pCFKwO A478 64,7
Error in line 243: YDX A478 60,2
